--- a/templates/report.html
+++ b/templates/report.html
@@ -8,11 +8,9 @@
 </head>
 
 <body>
-    <h1>Job Search</h1>
-    <form action="/report" method="get">
-        <input placeholder='Search for a job' required name="word" />
-        <button>Search</button>
-    </form>
+    <h1>Search Results</h1>
+    <h3>You are looking for {{searchingBy}}</h3>
+    {{potato}}
 </body>
 
 </html>
