--- a/templates/report.html
+++ b/templates/report.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Search Results</h1>
-    <h3>You are looking for {{searchingBy}}</h3>
+    <h3>Found {{resultsNumber}} result for: {{searchingBy}}</h3>
 </body>
 
 </html>
