--- a/templates/report.html
+++ b/templates/report.html
@@ -17,6 +17,7 @@
 <body>
     <h1>Search Results</h1>
     <h3>Found {{resultsNumber}} result for: {{searchingBy}}</h3>
+    <a href="/export?word={{searchingBy}}">Export to CSV</a>
     <section>
         <h4>Title</h4>
         <h4>Company</h4>
@@ -26,7 +27,7 @@
         <span>{{job.title}}</span>
         <span>{{job.company}}</span>
         <span>{{job.location}}</span>
-        <a href="{{job.link}}" target="_blank">Apply</a>
+        <a href="{{job.apply_link}}" target="_blank">Apply</a>
         {% endfor %}
     </section>
 </body>
